# sem-esw-rust

./: Cargo.toml  README.md  build.rs  test.py
proto/: esw_server.proto
src/: esw_server.rs  main.rs
test_directory/: esw_server_pb2.py  server.py  test.py  tester.py
