[package]
name = "sem-esw-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
protobuf = "2.27.1"
flate2 = "1.0"
dashmap = "5"
num_cpus = "1.0"

[build-dependencies]
protobuf-codegen-pure = "2.27.1"
protoc-rust = "2.27.1"

